--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <titleMy App/title>
         <body>
             This is my App!
+            Login form
         </body>    
 
     </head>
